<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_done"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="80dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/placeholder"
        android:scaleType="centerCrop"
        android:src="@drawable/singapore"
        app:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/favorite"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/info_background"
        android:clickable="true"
        android:contentDescription="@string/fab_content_description"
        android:focusable="true"
        android:padding="5dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_creator="0"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_done"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="@+id/activity_main_done"
        app:layout_constraintVertical_bias="0.19"
        app:layout_editor_absoluteX="359dp"
        app:layout_editor_absoluteY="104dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/singapore"
        android:textSize="24sp"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_creator="0"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="140dp" />

    <EditText
        android:id="@+id/cameraType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/camera_value"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/settings"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/settings"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_editor_absoluteX="73dp"
        app:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/cameraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/cameraType"
        android:text="@string/camera"
        app:layout_constraintBaseline_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="189dp" />

    <TextView
        android:id="@+id/settingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/settings"
        android:text="@string/settings"
        app:layout_constraintBaseline_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/settings"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="238dp" />


    <EditText
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/camera_settings"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/description"
        app:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/cameraType"
        app:layout_editor_absoluteX="73dp"
        app:layout_editor_absoluteY="225dp" />

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/upload"
        app:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_done"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
        app:layout_editor_absoluteX="307dp"
        app:layout_editor_absoluteY="538dp" />

    <Button
        android:id="@+id/discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:elevation="0dp"
        android:text="@string/discard"
        app:layout_constraintBaseline_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/upload"
        app:layout_constraintRight_creator="0"
        app:layout_constraintRight_toLeftOf="@+id/upload"
        app:layout_editor_absoluteX="211dp"
        app:layout_editor_absoluteY="538dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:fadingEdge="vertical"
        android:text="@string/singapore_description"
        android:textSize="15sp"
        app:layout_constraintBottom_creator="0"
        app:layout_constraintBottom_toTopOf="@+id/discard"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        app:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
        app:layout_constraintTop_creator="0"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="274dp" />

</androidx.constraintlayout.widget.ConstraintLayout>